{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 25,
  "lineage": "3903f3bf-6066-963c-f485-4439bf18fdb9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b01d85d1c28e9f47",
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:elastic-ip/eipalloc-0b01d85d1c28e9f47",
            "domain": "vpc",
            "id": "eipalloc-0b01d85d1c28e9f47",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-124-211-195.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.211.195",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cgc-mgmt-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0662f4965dfc70aca",
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:instance/i-0eb92b99353e1c478",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eb92b99353e1c478",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cgckey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05d885863733cdc99",
            "private_dns": "ip-10-0-0-135.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.135",
            "public_ip": "3.35.214.51",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b479b81b9d86effc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08738b4e30929525f",
            "tags": {
              "Name": "cgc-mgmt-server"
            },
            "tags_all": {
              "Name": "cgc-mgmt-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b8b0eba879073126"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cgc-mgmt-sg",
            "aws_subnet.public_subnet_a",
            "aws_vpc.cgc_pnp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cgc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:internet-gateway/igw-0f49b0f668c35a0bb",
            "id": "igw-0f49b0f668c35a0bb",
            "owner_id": "560971842042",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "cgc_igw"
            },
            "tags_all": {
              "Name": "cgc_igw"
            },
            "vpc_id": "vpc-0bcc13fbbafca8c38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cgc_pnp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cgc_pnp_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b01d85d1c28e9f47",
            "association_id": "eipassoc-04dbc179b6ba5ec4f",
            "connectivity_type": "public",
            "id": "nat-066683b8c8dbd54fa",
            "network_interface_id": "eni-0c18f83216687d4ef",
            "private_ip": "10.0.0.169",
            "public_ip": "13.124.211.195",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08738b4e30929525f",
            "tags": {
              "Name": "pnp-lab-nat"
            },
            "tags_all": {
              "Name": "pnp-lab-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_for_nat",
            "aws_subnet.public_subnet_a",
            "aws_vpc.cgc_pnp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:route-table/rtb-08f4b7d4fb1b128c3",
            "id": "rtb-08f4b7d4fb1b128c3",
            "owner_id": "560971842042",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-066683b8c8dbd54fa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_app"
            },
            "tags_all": {
              "Name": "private_app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcc13fbbafca8c38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_for_nat",
            "aws_nat_gateway.cgc_pnp_nat",
            "aws_subnet.public_subnet_a",
            "aws_vpc.cgc_pnp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:route-table/rtb-0336be3e1c8aacc6f",
            "id": "rtb-0336be3e1c8aacc6f",
            "owner_id": "560971842042",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-066683b8c8dbd54fa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_db"
            },
            "tags_all": {
              "Name": "private_db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcc13fbbafca8c38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_for_nat",
            "aws_nat_gateway.cgc_pnp_nat",
            "aws_subnet.public_subnet_a",
            "aws_vpc.cgc_pnp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:route-table/rtb-01c237bf711b052d6",
            "id": "rtb-01c237bf711b052d6",
            "owner_id": "560971842042",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-066683b8c8dbd54fa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_web"
            },
            "tags_all": {
              "Name": "private_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcc13fbbafca8c38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_for_nat",
            "aws_nat_gateway.cgc_pnp_nat",
            "aws_subnet.public_subnet_a",
            "aws_vpc.cgc_pnp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:route-table/rtb-06014c1f2b9b19c4e",
            "id": "rtb-06014c1f2b9b19c4e",
            "owner_id": "560971842042",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f49b0f668c35a0bb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rtb"
            },
            "tags_all": {
              "Name": "public_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcc13fbbafca8c38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.cgc_igw",
            "aws_vpc.cgc_pnp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_as_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4efb49757d32cbf",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-01c237bf711b052d6",
            "subnet_id": "subnet-0a1df9e536ab46553"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_for_nat",
            "aws_nat_gateway.cgc_pnp_nat",
            "aws_route_table.private_web",
            "aws_subnet.private_subnet_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.cgc_pnp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_as_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b41e5cfdcb2b7f02",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-01c237bf711b052d6",
            "subnet_id": "subnet-08875dca2e1cdaa27"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_for_nat",
            "aws_nat_gateway.cgc_pnp_nat",
            "aws_route_table.private_web",
            "aws_subnet.private_subnet_c",
            "aws_subnet.public_subnet_a",
            "aws_vpc.cgc_pnp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_as_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d7f8adda7ff07b5",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-08f4b7d4fb1b128c3",
            "subnet_id": "subnet-041cdf50ef329ab4c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_for_nat",
            "aws_nat_gateway.cgc_pnp_nat",
            "aws_route_table.private_app",
            "aws_subnet.private_subnet_2a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.cgc_pnp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_as_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8b7b84e3ff0faca",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-08f4b7d4fb1b128c3",
            "subnet_id": "subnet-07e52bba7cdca4517"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_for_nat",
            "aws_nat_gateway.cgc_pnp_nat",
            "aws_route_table.private_app",
            "aws_subnet.private_subnet_2c",
            "aws_subnet.public_subnet_a",
            "aws_vpc.cgc_pnp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_as_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d88164c7c889d35",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-06014c1f2b9b19c4e",
            "subnet_id": "subnet-08738b4e30929525f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.cgc_igw",
            "aws_route_table.public_rtb",
            "aws_subnet.public_subnet_a",
            "aws_vpc.cgc_pnp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_as_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087ef1558546ed0be",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-06014c1f2b9b19c4e",
            "subnet_id": "subnet-0ef39eed12b0804f0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.cgc_igw",
            "aws_route_table.public_rtb",
            "aws_subnet.public_subnet_c",
            "aws_vpc.cgc_pnp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cgc-mgmt-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:security-group/sg-0b8b0eba879073126",
            "description": "Allow ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8b0eba879073126",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cgc-mgmt-sg",
            "name_prefix": "",
            "owner_id": "560971842042",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cgc-mgmt-sg"
            },
            "tags_all": {
              "Name": "cgc-mgmt-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcc13fbbafca8c38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cgc_pnp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:subnet/subnet-085ca2bf655da7c28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085ca2bf655da7c28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "560971842042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "private_rds_a"
            },
            "tags_all": {
              "Name": "private_rds_a"
            },
            "vpc_id": "vpc-0bcc13fbbafca8c38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cgc_pnp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:subnet/subnet-0b29638a9440be248",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b29638a9440be248",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "560971842042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "private_rds_c"
            },
            "tags_all": {
              "Name": "private_rds_c"
            },
            "vpc_id": "vpc-0bcc13fbbafca8c38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cgc_pnp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:subnet/subnet-041cdf50ef329ab4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041cdf50ef329ab4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "560971842042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "private_subnet_2a"
            },
            "tags_all": {
              "Name": "private_subnet_2a"
            },
            "vpc_id": "vpc-0bcc13fbbafca8c38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cgc_pnp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:subnet/subnet-07e52bba7cdca4517",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e52bba7cdca4517",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "560971842042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "private_subnet_2c"
            },
            "tags_all": {
              "Name": "private_subnet_2c"
            },
            "vpc_id": "vpc-0bcc13fbbafca8c38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cgc_pnp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:subnet/subnet-0a1df9e536ab46553",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1df9e536ab46553",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "560971842042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "private_subnet_a"
            },
            "tags_all": {
              "Name": "private_subnet_a"
            },
            "vpc_id": "vpc-0bcc13fbbafca8c38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cgc_pnp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:subnet/subnet-08875dca2e1cdaa27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08875dca2e1cdaa27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "560971842042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "private_subnet_c"
            },
            "tags_all": {
              "Name": "private_subnet_c"
            },
            "vpc_id": "vpc-0bcc13fbbafca8c38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cgc_pnp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:subnet/subnet-08738b4e30929525f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08738b4e30929525f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "560971842042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "public_subnet_a"
            },
            "tags_all": {
              "Name": "public_subnet_a"
            },
            "vpc_id": "vpc-0bcc13fbbafca8c38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cgc_pnp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:subnet/subnet-0ef39eed12b0804f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef39eed12b0804f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "560971842042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "public_subnet_c"
            },
            "tags_all": {
              "Name": "public_subnet_c"
            },
            "vpc_id": "vpc-0bcc13fbbafca8c38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cgc_pnp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cgc_pnp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:vpc/vpc-0bcc13fbbafca8c38",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08453255c92d3f41f",
            "default_route_table_id": "rtb-0dc49b31fbff5625a",
            "default_security_group_id": "sg-0002b8e64ea948d98",
            "dhcp_options_id": "dopt-0e20d0588712ab9bd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bcc13fbbafca8c38",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dc49b31fbff5625a",
            "owner_id": "560971842042",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "cgc_pnp_vpc"
            },
            "tags_all": {
              "Name": "cgc_pnp_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}